--- a/src/org/chrisle/netbeans/plugins/nbsymlink/components/Bundle.properties
+++ b/src/org/chrisle/netbeans/plugins/nbsymlink/components/Bundle.properties
@@ -5,3 +5,4 @@ CreateSymlinkDialog._targetFolderLabel.AccessibleContext.accessibleName=&Target 
 CreateSymlinkDialog._targetFolder.text=
 CreateSymlinkDialog._targetFolderChooserBtn.text=Browse
 CreateSymlinkDialog._sourceFolderChooserBtn.text=Browse
+CreateSymlinkDialog._createSymlink.text=Create Symlink
