Updated readme.md and added short description.

--- a/src/org/chrisle/netbeans/plugins/nbsymlink/Bundle.properties
+++ b/src/org/chrisle/netbeans/plugins/nbsymlink/Bundle.properties
@@ -1,2 +1,3 @@
 OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Name=NbSymlink
+OpenIDE-Module-Short-Description=Create symlinks within Netbeans
