Added a long description to the plugin.

--- a/src/org/chrisle/netbeans/plugins/nbsymlink/Bundle.properties
+++ b/src/org/chrisle/netbeans/plugins/nbsymlink/Bundle.properties
@@ -1,3 +1,10 @@
 OpenIDE-Module-Display-Category=Tools
+OpenIDE-Module-Long-Description=\
+    <h1>NbSymlink</h1>\n\n<div>\n    <p>\n        With this plugin, it is very easy to create symlinks right inside netbeans.\n        \
+    You don't need a shell, you only need your IDE.\n    \
+    </p>\n\n    <div>\n        Right click on a folder/project, go to <strong>Create Symlink</strong> and choose <strong>Folder is source</strong>\n        or <strong>Folder is target</strong>. \
+    So you can say I want a symlink for my Project to another folder or\n        this project folder should be my target for another folder.\n    \
+    </div>\n</div>\n\n<h3>See how it works</h3>\n<img src="/screenshots/NbSymlink.gif?\
+    raw=true" />
 OpenIDE-Module-Name=NbSymlink
 OpenIDE-Module-Short-Description=Create symlinks within Netbeans
