--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,11 @@
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+#
+#Tue Jan 26 18:51:35 CET 2016
 javac.source=1.8
-javac.compilerargs=-Xlint -Xlint:-serial
 javadoc.arch=${basedir}/arch.xml
+nbm.homepage=https\://github.com/Chris2011/NbSymlink
 license.file=LICENSE
-nbm.homepage=https://github.com/Chris2011/NbSymlink
 nbm.module.author=ChrisLE
+keystore=nbproject/private/keystore
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+nbm_alias=ChrisLE
+javac.compilerargs=-Xlint -Xlint\:-serial
