Added title property.

--- a/src/org/chrisle/netbeans/plugins/nbsymlink/components/Bundle.properties
+++ b/src/org/chrisle/netbeans/plugins/nbsymlink/components/Bundle.properties
@@ -6,3 +6,4 @@ CreateSymlinkDialog._targetFolder.text=
 CreateSymlinkDialog._targetFolderChooserBtn.text=Browse
 CreateSymlinkDialog._sourceFolderChooserBtn.text=Browse
 CreateSymlinkDialog._createSymlink.text=Create Symlink
+CreateSymlinkDialog.title=Create symlink
